--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,11 +1,11 @@
-header {
+/* header {
   background-image: url("https://images.unsplash.com/photo-1516663713099-37eb6d60c825?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
   height: 100vh;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
+} */
 
 header {
   padding-top: 7rem;
